# Experience-System

./: .gitignore  LICENSE  README.md  System architect.md  System requirements.md  package-lock.json  test.py
1_Authentication/server/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.sh
1_Authentication/server/app/: log_config.yml  logger.py  main.py  utils.py
1_Authentication/server/app/alembic/: README  env.py
1_Authentication/server/app/alembic/versions/: 0b3acfca2cc0_initial_migration.py  148558af9706_initial_migration.py  283e1b3dc4d4_initial_migration.py  42fee95c0a82_initial_migration.py  59f6692470e5_initial_migration.py  (+5 more)
1_Authentication/server/app/api/: deps.py  router.py
1_Authentication/server/app/core/: celery.py  config.py  db.py  permission.py  redis.py  security.py
1_Authentication/server/app/crud/: base.py  items.py  tokens.py  users.py  verifies.py
1_Authentication/server/app/db/: db.py
1_Authentication/server/app/locales/: en.json  jp.json  vi.json
1_Authentication/server/app/middlewares/: error_handlers.py  middle_ware.py
1_Authentication/server/app/models/: base.py  item.py  items.py  token.py  tokens.py  user.py  users.py  verify.py
1_Authentication/server/app/repositories/: base.py  items.py  tokens.py  users.py  verifies.py
1_Authentication/server/app/schemas/: authetications.py  items.py  token.py  tokens.py  users.py  utils.py  verifies.py
1_Authentication/server/app/services/: authentications.py  authetications.py  auths.py  items.py  users.py  verify.py
1_Authentication/server/app/utils/: log_config.yml  logger.py  translation.py
1_Authentication/server/scripts/: run.bat  run.sh  setup.bat  setup.sh
Mini Summary Blog/: JWT.md  (+3 more)
(+77 files in other folders)
